horizontal overflow problem solved

--- a/suzuki.css
+++ b/suzuki.css
@@ -3,6 +3,7 @@ body{
     margin:0;
     padding: 0;
     font-family: 'Lato', sans-serif;
+    overflow-x: hidden;
     
 }
 .header{
@@ -12,7 +13,7 @@ body{
     border-bottom: solid 1px #fafafa;
     display: flex;
     object-fit: contain;
-    overflow: hidden;
+    
 }
 .headerimage{
     width: 20%;
